FIX: Even though the Last.fm app and web page say something is scrobbling, the scrobble doesn't actually get saved at the end. <i>Thanks to Tim Malseed for that.</i>
FIX: Fixed the plural typo in the artist list.
FIX: Toolbar had no shadow in the playlist view.