@@ -53,8 +53,6 @@
     <string name="action_go_to_album">إذهب إلى الألبوم</string>
     <string name="label_current_playing_queue">قائمة الإنتظار</string>
     <string name="save_as_playlist">حفظ كقائمة تشغيل</string>
-    <string name="credits_3">الأيقونة من تصميم</string>
-    <string name="credits_1">"مشغل الموسيقى فونقراف هو برنامج مجاني بشكلٍ كامل بتصميم أنيق من تصميم"</string>
     <string name="no_results">لا توجد نتائج</string>
     <string name="action_re_download_artist_image">تحديث صورة الفنان</string>
     <string name="updated_artist_image">تحديث صورة الفنان</string>
