@@ -40,8 +40,6 @@
     <string name="action_go_to_album">Πήγαινε στο δίσκο</string>
     <string name="label_current_playing_queue">Σειρά αναπαραγωγής</string>
     <string name="save_as_playlist">Αποθήκευση ως λίστα</string>
-    <string name="credits_3">Εικονίδιο από</string>
-    <string name="credits_1">"Το Phonograph είναι μια εντελώς δωρεάν εφαρμογή βασισμένη στο material design από"</string>
     <string name="no_results">Κανένα αποτέλεσμα</string>
     <string name="action_re_download_artist_image">Ανανέωση εικόνας καλλιτέχνη</string>
     <string name="updating">Γίνεται ανανέωση...</string>
