@@ -40,8 +40,6 @@
     <string name="action_go_to_album">Näytä albumi</string>
     <string name="label_current_playing_queue">Toistojono</string>
     <string name="save_as_playlist">Tallenna soittolistana</string>
-    <string name="credits_3">Kuvake</string>
-    <string name="credits_1">"Phonograph on täysin ilmainen material designin omaava musiikkisoitin jonka on tehnyt"</string>
     <string name="no_results">Ei hakutulosta</string>
     <string name="action_re_download_artist_image">Päivitä artistin kuva</string>
     <string name="updating">Päivitetään...</string>
