@@ -52,8 +52,6 @@
     <string name="action_go_to_album">Idi na album</string>
     <string name="label_current_playing_queue">Red čekanja</string>
     <string name="save_as_playlist">Spremi kao popis pjesama</string>
-    <string name="credits_3">Ikonu kreirao</string>
-    <string name="credits_1">"Phonograph je potpuno besplatna materijalno dizajnirana aplikacija za reproduciranje glazbe koju je napravio"</string>
     <string name="no_results">Nema rezultata</string>
     <string name="action_re_download_artist_image">Ažuriraj sliku izvođača</string>
     <string name="updated_artist_image">Ažurirana slika izvođača.</string>
