@@ -52,10 +52,6 @@
     <string name="action_go_to_album">アルバムを表示</string>
     <string name="label_current_playing_queue">キュー</string>
     <string name="save_as_playlist">プレイリストとして保存</string>
-    <string name="credits_3">アイコンデザイン:</string>
-    <string name="credits_1">"Phonographはマテリアルデザインを採用した完全無料のミュージックプレイヤーです　
-
-開発者:"</string>
     <string name="no_results">該当なし</string>
     <string name="action_re_download_artist_image">アーティスト画像を更新</string>
     <string name="updated_artist_image">アーティスト画像を更新しました</string>
