@@ -52,8 +52,6 @@
     <string name="action_go_to_album">Ga naar album</string>
     <string name="label_current_playing_queue">Afspeelwachtrij</string>
     <string name="save_as_playlist">Opslaan als afspeellijst</string>
-    <string name="credits_3">Icoon door</string>
-    <string name="credits_1">"Phonograph is een volledig gratis muziekspeler in material design door"</string>
     <string name="no_results">Geen resultaten</string>
     <string name="action_re_download_artist_image">Artiest afbeelding bijwerken</string>
     <string name="updated_artist_image">Artiest afbeelding bijgewerkt.</string>
