@@ -52,8 +52,6 @@
     <string name="action_go_to_album">Du-te la album</string>
     <string name="label_current_playing_queue">Lista de redare</string>
     <string name="save_as_playlist">Salvează ca și lista de redare</string>
-    <string name="credits_3">Iconița de</string>
-    <string name="credits_1">"Phonograph este o aplicație complet gratuită bazată pe Material Design făcută de"</string>
     <string name="no_results">Niciun rezultat</string>
     <string name="action_re_download_artist_image">Actualizează imagine artist</string>
     <string name="updating">Actualizare...</string>
