@@ -52,8 +52,6 @@
     <string name="action_go_to_album">Перейти к альбому</string>
     <string name="label_current_playing_queue">Очередь воспроизведения</string>
     <string name="save_as_playlist">Сохранить в плейлист</string>
-    <string name="credits_3">Дизайн иконки</string>
-    <string name="credits_1">"Phonograph - полностью бесплатный музыкальный плеер в материальном стиле, созданный"</string>
     <string name="no_results">Нет результатов</string>
     <string name="action_re_download_artist_image">Обновить изображение исполнителя</string>
     <string name="updated_artist_image">Изображение исполнителя обновлено.</string>
