@@ -40,8 +40,6 @@
     <string name="action_go_to_album">Gå till album</string>
     <string name="label_current_playing_queue">Spelar kö</string>
     <string name="save_as_playlist">Spara som spellista</string>
-    <string name="credits_3">Ikon av</string>
-    <string name="credits_1">"Phonograph är en helt gratis musikspelare med Material Design av"</string>
     <string name="no_results">Inga resultat</string>
     <string name="action_re_download_artist_image">Uppdatera artistbild</string>
     <string name="updating">Uppdaterar ...</string>
