@@ -52,8 +52,6 @@
     <string name="action_go_to_album">专辑详情</string>
     <string name="label_current_playing_queue">正在播放队列</string>
     <string name="save_as_playlist">保存为播放列表</string>
-    <string name="credits_3">图标设计者是</string>
-    <string name="credits_1">"Phonograph 是一个完全免费并采用质感设计的音乐播放器，开发者是"</string>
     <string name="no_results">没有找到结果</string>
     <string name="action_re_download_artist_image">更新艺术家图片</string>
     <string name="updated_artist_image">艺术家图片已更新。</string>
